--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-TEST TEST TEST
+This is for working collaboratively on CSC3380. If you are unfamiliar with Git then be careful/ask before doing anything.
